--- a/doc/references.bib
+++ b/doc/references.bib
@@ -26,7 +26,7 @@
   url = {https://yihui.org/knitr/},
 }
 
-  @article{milner1969weight,
+ @Article{milner1969weight,
   title={Weight of horses: improved estimates based on girth and length.},
   author={Milner, Jean and Hewitt, D},
   journal={The Canadian Veterinary Journal},
